--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.cribsfinder.app</string>
+	<string>com.cribsfinder.mobile</string>
 	<key>PROJECT_ID</key>
 	<string>cribsfinder-dda93</string>
 	<key>STORAGE_BUCKET</key>
