Cleanup and firebase integration

--- a/firebase.json
+++ b/firebase.json
@@ -1,30 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "nobleassets-dda93",
-          "appId": "1:149378416912:android:18d35b34cefebe54502595",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "nobleassets-dda93",
-          "appId": "1:149378416912:ios:846b0fe2770dca14502595",
-          "uploadDebugSymbols": true,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "nobleassets-dda93",
-          "configurations": {
-            "android": "1:149378416912:android:18d35b34cefebe54502595",
-            "ios": "1:149378416912:ios:846b0fe2770dca14502595"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"noble-assets-apps","appId":"1:867234111262:android:57c4e640883c520b5bf30f","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"nobleassets-dda93","appId":"1:149378416912:ios:846b0fe2770dca14502595","uploadDebugSymbols":true,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"noble-assets-apps","configurations":{"android":"1:867234111262:android:57c4e640883c520b5bf30f"}}}}}}
