--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCEOaI34HQCfn5HBo7IjspiDw7-7GlWwVI</string>
+	<string>AIzaSyDMo2T3ii0SCH58SawnSRSItztM4GN4VC4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>149378416912</string>
+	<string>867234111262</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.nobleassets.app</string>
 	<key>PROJECT_ID</key>
-	<string>nobleassets-dda93</string>
+	<string>noble-assets-apps</string>
 	<key>STORAGE_BUCKET</key>
-	<string>nobleassets-dda93.firebasestorage.app</string>
+	<string>noble-assets-apps.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,8 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:149378416912:ios:846b0fe2770dca14502595</string>
-	<key>DATABASE_URL</key>
-	<string>https://nobleassets-dda93-default-rtdb.firebaseio.com</string>
+	<string>1:867234111262:ios:d8c858fde211be4e5bf30f</string>
 </dict>
 </plist>
