--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.1+5
+version: 1.1.2+6
 
 environment:
   sdk: ^3.6.1
@@ -35,11 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   card_swiper: ^3.0.1
-  firebase_core: ^3.11.0
+  firebase_core: ^3.15.2
   firebase_analytics: ^11.4.2
-  firebase_crashlytics: ^4.3.2
-  firebase_performance: ^0.10.1+2
-  firebase_database: ^11.3.4
+  firebase_crashlytics: ^4.3.10
+  firebase_performance: ^0.10.1+10
   avatar_stack: ^3.0.0
   google_fonts: ^6.2.1
   animate_do: ^4.2.0
@@ -77,6 +76,7 @@ dependencies:
   share_plus: ^11.0.0
   file_picker: ^10.2.1
   animated_svg: ^2.1.0
+  currency_text_input_formatter: ^2.1.10
 
   # pusher_beams: ^1.1.2
 
